# billing-system

./: CMakeLists.txt  README.md
include/: mess1.txt  mess2.txt  mess3.txt  sql_query_1.txt  sql_query_2.txt
src/: main.cpp
